k8s/apps/redis/dns.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis-dns
  namespace: redis
spec:
  type: ExternalName
  externalName: redis-master.redis.svc.cluster.local
  ports:
  - port: 6379
