k8s/apps/redis/manifest.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis-dns
  namespace: redis
spec:
  type: ExternalName
  externalName: redis-master.redis.svc.cluster.local
  ports:
  - port: 6379
  
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis-ingress-route-tcp
  namespace: redis
spec:
  entryPoints:
    - redis
  routes:
    - match: HostSNI(`*`)
      services:
        - name: redis-master
          port: 6379
          terminationDelay: -1
